--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,7 @@ p {
 
 /* Links */
 a {
-    color: #1abc9c;
+    color: #000080;
     word-wrap: break-word;
 
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -60,7 +60,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #7b7b7b;
+    color: #B0C4DE;
     text-decoration: none;
     outline: 0;
 }
@@ -95,16 +95,16 @@ a:after {
 }
 
 .navbar-inverse {
-	background-color: #1abc9c;
-	border-color: #16a085;
+	background-color: #000080;
+	border-color: #000080;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: white;
+	color: #F5DEB3;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-	color: #222222;
+	color: #F5DEB3;
 }
 
 .navbar-brand {
@@ -114,7 +114,7 @@ a:after {
 }
 
 .navbar-inverse .navbar-brand {
-	color: white;
+	color: #F5DEB3;
 }
 
 .navbar-inverse .navbar-toggle {
@@ -122,7 +122,7 @@ a:after {
 }
 
 .progress-bar-theme {
-  background-color: #1abc9c;
+  background-color: #000080;
 }
 
 
@@ -144,22 +144,22 @@ a:after {
 #ww {
 	padding-top: 70px;
 	padding-bottom: 70px;
-	background-color: #f2f2f2;
+	background-color: #ffffff;
 }
 
 
 #footer {
-	background-color: #2f2f2f;
+	background-color: #F5DEB3;
 	padding-top: 50px;
 	padding-bottom: 50px; 
 }
 
 #footer p {
-	color: white;
+	color: #000080;
 }
 
 #footer h4 {
-	color: white;
+	color: #000080;
 	text-transform: uppercase;
 	padding-bottom: 20px;
 }
@@ -170,7 +170,7 @@ a:after {
 #grey {
 	padding-top: 60px;
 	padding-bottom: 60px;
-	background-color: #f2f2f2;
+	background-color: #ffffff;
 }
 
 #white {
@@ -238,5 +238,5 @@ bt {
 
 .glyphicon {
 	font-size: 40px;
-	color: #1abc9c;
+	color: #000080;
 }
