--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <!-- +++++ Welcome Section +++++ -->
 	<div id="ww">
 	    <div class="container">
-            <img src="/img/user.png" alt="Maggie">
+            <center><img src="/img/user.png" alt="Maggie"></center>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
 				<!--	<img src="/img/user.png" alt="Maggie">-->
