--- a/views/home.erb
+++ b/views/home.erb
@@ -6,7 +6,9 @@
 				<div class="col-lg-8 col-lg-offset-2 centered">
 				<!--	<img src="/img/user.png" alt="Maggie">-->
 					<h1>MAGGIE JOHNSON</h1>
-					<p>I am a Media Studies student at Mercer University's Center for Collaborative Journalism. </p>
+					<p>Senior Media Studies student at Mercer University's Center for Collaborative Journalism.<hr>
+                        Traveling. Music. NASCAR. 
+                    </p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
