--- a/views/works.erb
+++ b/views/works.erb
@@ -3,9 +3,9 @@
 			<div class="col-lg-8 col-lg-offset-2">
                     <h1><%= @title %></h1>
                 <p>
-                    <a href="http://www.gpb.org/news/2014/07/01/allman-brothers-were-a-force-for-racial-integration-in-the-south">"The Allman Brothers Were a Force for Racial Integration in the South"</a> by Maggie Johnson for Georgia Public Broadcasting<br/>
-                    <a href="https://www.youtube.com/watch?v=mZyg5vqjvmY&list=UUqS1gvEhXUPuldmoxJsW2DA&index=1">JMS 350 Final Film</a>- Youtube video<br/>
-                    <a href="http://www.macon.com/2014/11/05/3406851_what-mattered-to-midstate-voters.html?rh=1">Midstate Elections</a> - Macon Telegraph article 
+                    <a href="http://www.gpb.org/news/2014/07/01/allman-brothers-were-a-force-for-racial-integration-in-the-south">"The Allman Brothers Were a Force for Racial Integration in the South"</a>- Georgia Public Broadcasting<br/>
+                    <a href="https://www.youtube.com/watch?v=mZyg5vqjvmY&list=UUqS1gvEhXUPuldmoxJsW2DA&index=1">JMS 350 Final Film</a>- Mercer University<br/>
+                    <a href="http://www.macon.com/2014/11/05/3406851_what-mattered-to-midstate-voters.html?rh=1">Midstate Elections</a> - Macon Telegraph 
                     
                 </p>
             </div>
