--- a/views/layout.erb
+++ b/views/layout.erb
@@ -72,9 +72,9 @@
 				
 				<div class="col-lg-4">
 					<h4>My Links</h4>
-					<p> <a href="https://twitter.com/mags_johnson">Twitter</a><br/>
-				        <a href="https://facebook.com/maggiej00">Facebook</a><br/>
-                        <a href="https://www.linkedin.com/profile/view?id=226431830&trk=nav_responsive_tab_profile_pic">LinkedIn</a>
+					<p> <a href="https://twitter.com/mags_johnson" target="_blank">Twitter</a><br/>
+				        <a href="https://facebook.com/maggiej00" target="_blank">Facebook</a><br/>
+                        <a href="https://www.linkedin.com/profile/view?id=226431830&trk=nav_responsive_tab_profile_pic" target="_blank">LinkedIn</a>
 					</p>
 				</div><!-- /col-lg-4 -->			
 			</div>
