--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,11 +10,15 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body {
-  	background-color: #ffffff;
+    background-image: url("/img/bg.jpg");
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;  
+    background-size: cover;
   	font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
-    color: #555;
+    color: #000000;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -48,7 +52,7 @@ p {
 
 /* Links */
 a {
-    color: #000080;
+    color: #ffffff;
     word-wrap: break-word;
 
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -60,7 +64,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #B0C4DE;
+    color: #555;
     text-decoration: none;
     outline: 0;
 }
@@ -95,16 +99,16 @@ a:after {
 }
 
 .navbar-inverse {
-	background-color: #000080;
-	border-color: #000080;
+	background-color: #000000;
+	border-color: #000000;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: #F5DEB3;
+	color: #ffffff;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-	color: #F5DEB3;
+	color: #ffffff;
 }
 
 .navbar-brand {
@@ -114,7 +118,7 @@ a:after {
 }
 
 .navbar-inverse .navbar-brand {
-	color: #F5DEB3;
+	color: #ffffff;
 }
 
 .navbar-inverse .navbar-toggle {
@@ -122,7 +126,7 @@ a:after {
 }
 
 .progress-bar-theme {
-  background-color: #000080;
+  background-color: #555;
 }
 
 
@@ -144,22 +148,24 @@ a:after {
 #ww {
 	padding-top: 70px;
 	padding-bottom: 70px;
-	background-color: #ffffff;
+
+    background-image: url("/img/bg.jpg");
+
+    background-repeat:no-repeat; 
+    background-size:cover;
 }
 
 
 #footer {
-	background-color: #F5DEB3;
-	padding-top: 50px;
-	padding-bottom: 50px; 
+	background-color: #000000;
 }
 
 #footer p {
-	color: #000080;
+	color: #ffffff;
 }
 
 #footer h4 {
-	color: #000080;
+	color: #ffffff;
 	text-transform: uppercase;
 	padding-bottom: 20px;
 }
@@ -185,7 +191,7 @@ a:after {
 bd {
 	font-size: 12px;
 	text-transform: uppercase;
-	color: #d2d2d2;
+	color: #555;
 	font-weight: 700;
 }
 
